# tofu-sdk-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/example-aws/: Cargo.toml
crates/example-aws/src/: main.rs
crates/example-aws/tests/: terraform_engine.rs  tofu_apply.rs  tofu_schema.rs  tofu_test.rs
crates/example-aws/tests/common/: mod.rs
crates/example-aws/tests/tofu/: data_source.tftest.hcl  force_new.tftest.hcl  functions.tftest.hcl  lifecycle.tftest.hcl  main.tf  provider_region.tftest.hcl  write_only.tftest.hcl
crates/example-fs/: Cargo.toml
crates/example-fs/src/: main.rs
crates/example-nix/: Cargo.toml  README.md
crates/example-nix/src/: main.rs
crates/example-postgres/: Cargo.toml  README.md
crates/example-postgres/src/: config.rs  database.rs  extension.rs  main.rs  role.rs  schema.rs  sql.rs  table.rs
crates/example-postgres/tests/: tofu_test.rs
crates/example-postgres/tests/common/: mod.rs
crates/example-postgres/tests/tofu/: lifecycle.tftest.hcl  main.tf  update_replace.tftest.hcl
crates/terraform-attrs/: Cargo.toml
crates/terraform-attrs/src/: lib.rs
crates/terraform-codec/: Cargo.toml
crates/terraform-codec/src/: decode.rs  encode.rs  lib.rs  typed.rs
crates/terraform-ir/: Cargo.toml
crates/terraform-ir/src/: lib.rs
crates/terraform-macros/: Cargo.toml
crates/terraform-macros/src/: lib.rs
crates/terraform-provider/: Cargo.toml
crates/terraform-provider/src/: lib.rs
crates/terraform-reflect/: Cargo.toml
crates/terraform-reflect/src/: lib.rs  reader.rs
crates/terraform-runtime/: Cargo.toml
crates/terraform-runtime/src/: action.rs  builder.rs  ctx.rs  data_source.rs  ephemeral.rs  function.rs  handshake.rs  lib.rs  list.rs  log.rs  normalize.rs  plan.rs  resource.rs  serve.rs  service.rs  state_store.rs  timeouts.rs  tls.rs  write_only.rs
crates/terraform-runtime/tests/: service.rs
crates/terraform-tfplugin6/: Cargo.toml  build.rs
crates/terraform-tfplugin6/src/: emit.rs  lib.rs
crates/terraform-tfplugin6/tests/: end_to_end.rs
crates/terraform-value/: Cargo.toml
crates/terraform-value/src/: lib.rs  number.rs  ty.rs  value.rs
docs/: ROADMAP.md
harness/: README.md  harness.test.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.global-setup.ts
harness/configs/basic/1/: main.tf
harness/configs/basic/1/expected/: alpha.json  beta.json
harness/configs/basic/2/: main.tf
harness/configs/basic/2/expected/: alpha.json
harness/configs/basic/3/: main.tf
harness/configs/basic/3/expected/: gamma.json
harness/configs/documents/1/: main.tf
harness/configs/documents/1/expected/: report.doc.json
harness/configs/documents/2/: main.tf
harness/configs/documents/2/expected/: report.doc.json
harness/configs/documents/3/: main.tf
harness/configs/documents/3/expected/: archive.doc.json
harness/configs/grows/1/: main.tf
harness/configs/grows/1/expected/: config.json
harness/configs/grows/2/: main.tf
harness/configs/grows/2/expected/: config.json
harness/src/: harness.ts
