[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cramt/tofu-sdk-rs"
rust-version = "1.85"

[workspace.dependencies]
# External
# facet 0.46.5 (and facet-core/facet-reflect/facet-path/facet-solver 0.46.5) are
# all published on crates.io now, so the `reflect` feature (Peek/Partial)
# resolves without a git source or a [patch.crates-io] override. JSON handling
# goes through facet-json / facet-value (from the facet-format repo) instead of
# serde; their transitive facet-* deps are ^0.46 and unify on facet-core 0.46.5.
facet = "0.46"
facet-json = "0.46"
facet-value = "0.46"
thiserror = "2"

# Internal crates (path deps)
terraform-attrs = { path = "crates/terraform-attrs" }
terraform-value = { path = "crates/terraform-value" }
terraform-ir = { path = "crates/terraform-ir" }
terraform-reflect = { path = "crates/terraform-reflect" }
terraform-codec = { path = "crates/terraform-codec" }
terraform-runtime = { path = "crates/terraform-runtime" }
terraform-tfplugin6 = { path = "crates/terraform-tfplugin6" }
terraform-macros = { path = "crates/terraform-macros" }
terraform-provider = { path = "crates/terraform-provider" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
