[package]
name = "example-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

# A minimal end-to-end example provider. Doubles as documentation of the
# author-facing API and as the subject of the plugin-launch integration test.

[[bin]]
name = "example-aws"
path = "src/main.rs"

[dependencies]
facet = { workspace = true }
terraform-provider = { workspace = true }
terraform-runtime = { workspace = true }
# A struct-payload attribute (`search_key(...)`) expands to code that names the
# `terraform_attrs` crate by path, so consumers that use it need it as a direct
# dependency (the same pattern as facet's own `testattrs`). Unit attributes work
# through the `terraform_provider::terraform` re-export alone.
terraform-attrs = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# The contract test drives the real `tofu`/`terraform` binary and parses its
# JSON output with facet-json/facet-value — no in-process gRPC needed.
facet-json = { workspace = true }
facet-value = { workspace = true }

[lints]
workspace = true
