[package]
name = "terraform-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
terraform-value = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rmpv = "1"

[lints]
workspace = true
