[package]
name = "terraform-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# `reflect` enables the Peek/Partial reflection API used by the typed layer.
facet = { workspace = true, features = ["reflect"] }
terraform-value = { workspace = true, features = ["facet"] }
facet-value = { workspace = true }
thiserror = { workspace = true }
rmpv = "1"

[dev-dependencies]
terraform-attrs = { workspace = true }
facet-json = { workspace = true }

[lints]
workspace = true
