[package]
name = "terraform-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
facet = { workspace = true }
terraform-attrs = { workspace = true }
terraform-value = { workspace = true }
terraform-ir = { workspace = true }
terraform-reflect = { workspace = true }

[lints]
workspace = true
