[package]
name = "terraform-reflect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
facet = { workspace = true }
terraform-value = { workspace = true, features = ["facet"] }
terraform-ir = { workspace = true }
# Needed to decode the structured `search_key` payload (`terraform_attrs::Attr`)
# off a field; the unit flags are still read by string key.
terraform-attrs = { workspace = true }

[lints]
workspace = true
