[package]
name = "terraform-tfplugin6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# The generated protocol types carry the proto's prose as doc comments, some of
# which look like indented code blocks and would be run as (failing) doctests.
doctest = false

[dependencies]
terraform-value = { workspace = true }
terraform-ir = { workspace = true }
serde_json = { workspace = true }
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "server",
    "channel",
] }
tonic-prost = "0.14"

[dev-dependencies]
facet = { workspace = true }
terraform-attrs = { workspace = true }
terraform-reflect = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true
